--- a/{{ cookiecutter.project_slug }}/pyproject.toml
+++ b/{{ cookiecutter.project_slug }}/pyproject.toml
@@ -22,7 +22,7 @@ dev = [
 ]
 
 [tool.ruff]
-line-length = 120
+line-length = 100
 target-version = "py313"
 exclude = [
     ".bzr",
@@ -56,15 +56,18 @@ lint.select = [
     "D",  # pydocstyle (optional, can be removed if not needed)
 ]
 lint.ignore = [
-    "E501", # Line too long (handled by ruff-format)
-    "D100", # Missing docstrings (can be too strict for quick projects)
-    "D104", # Missing docstrings on __init__.py
-    "D105", # Missing docstrings on magic methods
-    "D107", # Missing docstrings on __init__
+    "E501", # Line too long (correctly ignored as ruff-format handles this, or `line-length` applies)
+    "D100", # Missing docstrings on public modules
+    "D101", # Missing docstrings on public classes (if you want to ignore it, keep this. Otherwise, remove it to enforce docstrings)
+    "D102", # Missing docstring in public method
+    "D104", # Missing docstrings on __init__.py files
+    "D105", # Missing docstrings on magic methods (e.g., __str__)
+    "D106", # Missing docstring in public nested class
+    "D107", # Missing docstrings on __init__ methods
 ]
-lint.unfixable = [
-    "F401",  # Unused imports - fixable by Ruff, but setting as unfixable if you prefer to manually manage imports
-]
+
+[tool.ruff.lint.pydocstyle]
+convention = "google" # Recommended: "google", "numpy", or "pep257"
 
 [tool.ruff.lint.isort]
 known-first-party = ["{{ cookiecutter.project_slug }}", "api", "app"]
